# tree-sitter-cpp

./: Cargo.toml
bindings/rust/: lib.rs
queries/: highlights.scm
