[package]
name = "tree-sitter-cpp"
description = "C++ grammar for tree-sitter"
version = "0.20.5"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "cpp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-cpp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-c2rust = { git = "https://github.com/liamrosenfeld/tree-sitter", branch = "cfg-fix" }

[build-dependencies]
cc = "~1.0"
